...


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/product_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_details_image_holder"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="product name"
...
        android:text="product price"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/product_details_btn_combo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_solid">

        <LinearLayout
            android:id="@+id/quantity_number_add_decrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_hollow"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="decreaseInteger"
                android:text="−"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/integer_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textColor="@color/colorPrimary"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:onClick="increaseInteger"
                android:text="+"

                android:textSize="40dp" />
        </LinearLayout>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/quantity_number_add_decrease"
            android:background="@drawable/button_solid"
            android:paddingRight="20dp"
            android:stateListAnimator="@null"
            android:text="Add to cart"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

...
